
	* Modified copyright statement in files to include up to 2013.

	* get-oui, get-iab: Modified regex to allow optional whitespace at
	  the beginning of line.

	* ieee-oui.txt, ieee-iab.txt: Updated IEEE OUI and IAB listings from
	  IEEE website using get-oui and get-iab Perl scripts.

	* check-decode: Updated for new IEEE OUI vendors.

	* configure.ac: Incremented version number to 1.8.3.

2013-01-01 Roy Hills <Roy.Hills@nta-monitor.com>

	* arp-fingerprint: Added Windows 8

2012-08-08 Roy Hills <Roy.Hills@nta-monitor.com>

	* configure.ac: Added OS pattern for Dragonfly BSD.

2012-06-06 Roy Hills <Roy.Hills@nta-monitor.com>

	* arp-fingerprint: Added fingerprint for BeOS.

2012-05-29 Roy Hills <Roy.Hills@nta-monitor.com>

	* arp-scan.c: Copy the pcap_header->ts structure to a temporary
	  struct timeval before passing to timeval_diff during rtt calculation.
	  We can't pass a pointer to pcap_header->ts directly to timeval_diff
	  because it's not guaranteed to have the same size as a struct
	  timeval. E.g. OpenBSD 5.1 on amd64. Thanks to Stuart Henderson at
	  OpenBSD for spotting this bug.

2012-05-20 Roy Hills <Roy.Hills@nta-monitor.com>

	* get-oui, get-iab: Applied patch from Stuart Henderson at OpenBSD.
	  This allows the -u (alternative URL) option to be correctly handled,
	  and changes the default URLs to the new locations on the IEEE
	  website (the old locations still work, but with a redirect).

	* ieee-oui.txt, ieee-iab.txt: Updated IEEE OUI and IAB listings from
	  IEEE website using get-oui and get-iab Perl scripts.

2011-12-30 Roy Hills <Roy.Hills@nta-monitor.com>

	* arp-scan.c, arp-scan.h, arp-scan.1: If the location of the various
	  MAC/Vendor mapping files (IEEE OUI, IEEE IAB or custom) are not
	  specified on the command line with the appropriate option, then
	  look for them in the current directory before looking in the system
	  wide location.

	* ieee-oui.txt, ieee-iab.txt: Updated IEEE OUI and IAB listings from